[package]
name = "fk_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.4", features = ["sponge", "crh", "r1cs", "commitment","prf"] }
ark-bls12-381 = "0.4"
ark-std = "0.4"
ark-ed-on-bls12-381 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
rand = "0.8.5"
